--- a/Win32Project1/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1/Win32Project1.vcxproj
@@ -149,7 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="BaseObject2D.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Bullet2.h" />
     <ClInclude Include="KeyControl.h" />
     <ClInclude Include="mEnemyBullet.h" />
     <ClInclude Include="mGameObject.h" />
@@ -163,7 +165,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="BaseObject2D.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Bullet2.cpp" />
     <ClCompile Include="KeyControl.cpp" />
     <ClCompile Include="mEnemyBullet.cpp" />
     <ClCompile Include="mGameObject.cpp" />
