--- a/Win32Project1/Win32Project1/Win32Project1.vcxproj.filters
+++ b/Win32Project1/Win32Project1/Win32Project1.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Screen.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="BulletPattern.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -108,6 +111,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Screen.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="BulletPattern.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
