--- a/Win32Project1/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1/Win32Project1.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="mEnemyBullet.h" />
     <ClInclude Include="mGameObject.h" />
     <ClInclude Include="mGraphic.h" />
+    <ClInclude Include="mSound.h" />
     <ClInclude Include="PlayerDecorationObject.h" />
     <ClInclude Include="PlayerObject.h" />
     <ClInclude Include="Resource.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="mEnemyBullet.cpp" />
     <ClCompile Include="mGameObject.cpp" />
     <ClCompile Include="mGraphic.cpp" />
+    <ClCompile Include="mSound.cpp" />
     <ClCompile Include="PlayerDecorationObject.cpp" />
     <ClCompile Include="PlayerObject.cpp" />
     <ClCompile Include="Screen.cpp" />
