--- a/Win32Project1/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1/Win32Project1.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="Log.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
